prev22/gen/PrevParser.java
// Generated from /home/samom8/Desktop/faks/3.Letnik/2.semester/Prevajalniki/prev22/src/prev/phase/synan/PrevParser.g4 by ANTLR 4.9.2


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.data.ast.tree.*;
	import prev.data.ast.tree.decl.*;
	import prev.data.ast.tree.expr.*;
	import prev.data.ast.tree.stmt.*;
	import prev.data.ast.tree.type.*;
	import prev.phase.lexan.*;
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL=1, CHAR=2, DEL=3, DO=4, ELSE=5, FUN=6, IF=7, INT=8, NEW=9, THEN=10, 
		TYP=11, VAR=12, VOID=13, WHERE=14, WHILE=15, LPAREN=16, RPAREN=17, LBRACE=18, 
		RBRACE=19, LBRACK=20, RBRACK=21, DOT=22, COMMA=23, COLON=24, SECOL=25, 
		BITAND=26, BITOR=27, BANG=28, EQUAL=29, NOTEQ=30, LT=31, GT=32, LE=33, 
		GE=34, MUL=35, DIV=36, MOD=37, PLUS=38, MINUS=39, POWER=40, ASSIGN=41, 
		NONE=42, BOOLLIT=43, ZERO_PADDED_ERROR=44, NUM=45, CHARLIT=46, STRINGLIT=47, 
		NIL=48, ID=49, WS=50, TAB=51, COMMENT=52, UNTERMINATED_STRING=53, UNTERMINATED_CHAR=54, 
		UNESCAPED_CHARACTER=55, UNRECOGNIZED=56;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_type = 2, RULE_expr = 3, RULE_stmt = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "type", "expr", "stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'char'", "'del'", "'do'", "'else'", "'fun'", "'if'", 
			"'int'", "'new'", "'then'", "'typ'", "'var'", "'void'", "'where'", "'while'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "':'", "';'", 
			"'&'", "'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'^'", "'='", "'none'", null, null, null, 
			null, null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL", "CHAR", "DEL", "DO", "ELSE", "FUN", "IF", "INT", "NEW", 
			"THEN", "TYP", "VAR", "VOID", "WHERE", "WHILE", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACK", "RBRACK", "DOT", "COMMA", "COLON", "SECOL", "BITAND", 
			"BITOR", "BANG", "EQUAL", "NOTEQ", "LT", "GT", "LE", "GE", "MUL", "DIV", 
			"MOD", "PLUS", "MINUS", "POWER", "ASSIGN", "NONE", "BOOLLIT", "ZERO_PADDED_ERROR", 
			"NUM", "CHARLIT", "STRINGLIT", "NIL", "ID", "WS", "TAB", "COMMENT", "UNTERMINATED_STRING", 
			"UNTERMINATED_CHAR", "UNESCAPED_CHARACTER", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token     tok) { return new Location((prev.data.sym.Token)tok); }
		private Location loc(Locatable loc) { return new Location(loc                 ); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((prev.data.sym.Token)tok1, (prev.data.sym.Token)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((prev.data.sym.Token)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1,                      (prev.data.sym.Token)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1,                      loc2); }


	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public DeclContext decl;
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<AstDecl> decls = new LinkedList<AstDecl>(); 
			setState(14); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(11);
				((SourceContext)_localctx).decl = decl();
				 decls.add(((SourceContext)_localctx).decl.ast); 
				}
				}
				setState(16); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << TYP) | (1L << VAR))) != 0) );
			 ((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(decls); 
			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public Token d_typ;
		public Token name;
		public TypeContext type;
		public Token d_var;
		public Token d_fun;
		public Token nameI;
		public Token nameII;
		public TypeContext typeII;
		public Token nameIII;
		public TypeContext typeIII;
		public TypeContext typeI;
		public ExprContext exprI;
		public TerminalNode ASSIGN() { return getToken(PrevParser.ASSIGN, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode TYP() { return getToken(PrevParser.TYP, 0); }
		public List<TerminalNode> ID() { return getTokens(PrevParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PrevParser.ID, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PrevParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PrevParser.COLON, i);
		}
		public TerminalNode VAR() { return getToken(PrevParser.VAR, 0); }
		public TerminalNode LPAREN() { return getToken(PrevParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PrevParser.RPAREN, 0); }
		public TerminalNode FUN() { return getToken(PrevParser.FUN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(PrevParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PrevParser.COMMA, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				((DeclContext)_localctx).d_typ = match(TYP);
				setState(22);
				((DeclContext)_localctx).name = match(ID);
				setState(23);
				match(ASSIGN);
				setState(24);
				((DeclContext)_localctx).type = type();

				        ((DeclContext)_localctx).ast =  new AstTypeDecl(
				            loc(((DeclContext)_localctx).d_typ, ((DeclContext)_localctx).type.ast),
				            ((DeclContext)_localctx).name.getText(),
				            ((DeclContext)_localctx).type.ast);
				        
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(27);
				((DeclContext)_localctx).d_var = match(VAR);
				setState(28);
				((DeclContext)_localctx).name = match(ID);
				setState(29);
				match(COLON);
				setState(30);
				((DeclContext)_localctx).type = type();

				        ((DeclContext)_localctx).ast =  new AstVarDecl(
				            loc(((DeclContext)_localctx).d_var, ((DeclContext)_localctx).type.ast),
				            ((DeclContext)_localctx).name.getText(),
				            ((DeclContext)_localctx).type.ast);
				        
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(33);
				((DeclContext)_localctx).d_fun = match(FUN);
				setState(34);
				((DeclContext)_localctx).nameI = match(ID);
				setState(35);
				match(LPAREN);
				 List<AstParDecl> pars = new LinkedList<AstParDecl>(); 
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(37);
					((DeclContext)_localctx).nameII = match(ID);
					setState(38);
					match(COLON);
					setState(39);
					((DeclContext)_localctx).typeII = type();
					 pars.add(new AstParDecl(loc(((DeclContext)_localctx).nameII, ((DeclContext)_localctx).typeII.ast), ((DeclContext)_localctx).nameII.getText(), ((DeclContext)_localctx).typeII.ast)); 
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(41);
						match(COMMA);
						setState(42);
						((DeclContext)_localctx).nameIII = match(ID);
						setState(43);
						match(COLON);
						setState(44);
						((DeclContext)_localctx).typeIII = type();
						 pars.add(new AstParDecl(loc(((DeclContext)_localctx).nameIII, ((DeclContext)_localctx).typeIII.ast), ((DeclContext)_localctx).nameIII.getText(), ((DeclContext)_localctx).typeIII.ast)); 
						}
						}
						setState(51);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				 AstTrees<AstParDecl> parsTree = pars.isEmpty() ? null : new AstTrees<AstParDecl>(pars); 
				setState(55);
				match(RPAREN);
				setState(56);
				match(COLON);
				setState(57);
				((DeclContext)_localctx).typeI = type();
				 AstExpr expr = null; 
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(59);
					match(ASSIGN);
					setState(60);
					((DeclContext)_localctx).exprI = expr(0);
					 expr = ((DeclContext)_localctx).exprI.ast; 
					}
				}


				        ((DeclContext)_localctx).ast =  new AstFunDecl(
				            loc(((DeclContext)_localctx).d_fun, expr == null ? ((DeclContext)_localctx).typeI.ast : expr),
				            ((DeclContext)_localctx).nameI.getText(),
				            parsTree,
				            ((DeclContext)_localctx).typeI.ast,
				            expr
				        );
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public AstType ast;
		public Token VOID;
		public Token CHAR;
		public Token INT;
		public Token BOOL;
		public Token name;
		public Token LBRACK;
		public ExprContext expr;
		public TypeContext type;
		public Token POWER;
		public Token LBRACE;
		public Token nameI;
		public Token nameII;
		public Token RBRACE;
		public Token LPAREN;
		public Token RPAREN;
		public TerminalNode VOID() { return getToken(PrevParser.VOID, 0); }
		public TerminalNode CHAR() { return getToken(PrevParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(PrevParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(PrevParser.BOOL, 0); }
		public List<TerminalNode> ID() { return getTokens(PrevParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PrevParser.ID, i);
		}
		public TerminalNode LBRACK() { return getToken(PrevParser.LBRACK, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(PrevParser.RBRACK, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode POWER() { return getToken(PrevParser.POWER, 0); }
		public TerminalNode LBRACE() { return getToken(PrevParser.LBRACE, 0); }
		public List<TerminalNode> COLON() { return getTokens(PrevParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PrevParser.COLON, i);
		}
		public TerminalNode RBRACE() { return getToken(PrevParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PrevParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PrevParser.COMMA, i);
		}
		public TerminalNode LPAREN() { return getToken(PrevParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PrevParser.RPAREN, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrevParserListener ) ((PrevParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrevParserVisitor ) return ((PrevParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				((TypeContext)_localctx).VOID = match(VOID);

				        ((TypeContext)_localctx).ast =  new AstAtomType(
				            loc(((TypeContext)_localctx).VOID),
				            AstAtomType.Type.VOID);
				        
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((TypeContext)_localctx).CHAR = match(CHAR);

				        ((TypeContext)_localctx).ast =  new AstAtomType(
				            loc(((TypeContext)_localctx).CHAR),
				            AstAtomType.Type.CHAR);
				        
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				((TypeContext)_localctx).INT = match(INT);

				        ((TypeContext)_localctx).ast =  new AstAtomType(
				            loc(((TypeContext)_localctx).INT),
				            AstAtomType.Type.INT);
				        
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				((TypeContext)_localctx).BOOL = match(BOOL);

				        ((TypeContext)_localctx).ast =  new AstAtomType(
				            loc(((TypeContext)_localctx).BOOL),
				            AstAtomType.Type.BOOL);
				        
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				((TypeContext)_localctx).name = match(ID);

				        ((TypeContext)_localctx).ast =  new AstNameType(
				            loc(((TypeContext)_localctx).name),
				            ((TypeContext)_localctx).name.getText());
				        
				}
				break;
			case LBRACK:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				((TypeContext)_localctx).LBRACK = match(LBRACK);
				setState(80);
				((TypeContext)_localctx).expr = expr(0);
				setState(81);
				match(RBRACK);
				setState(82);
				((TypeContext)_localctx).type = type();

				        ((TypeContext)_localctx).ast =  new AstArrType(
				            loc(((TypeContext)_localctx).LBRACK, ((TypeContext)_localctx).type.ast),
				            ((TypeContext)_localctx).type.ast,
				            ((TypeContext)_localctx).expr.ast);
				        
				}
				break;
			case POWER:
				enterOuterAlt(_localctx, 7);
				{
				setState(85);
				((TypeContext)_localctx).POWER = match(POWER);
				setState(86);
				((TypeContext)_localctx).type = type();
